# stonkwise

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  __main__.py  analyzer.py  cli.py  demo_price_action.py  poetry_scripts.py  pyproject.toml  setup.cfg  tasks.py
data_sources/: yahoo.py
stonkwise/: analyzer.py  backtester.py  cli.py  market_structure.py  patterns.py  plotter.py
stonkwise/data_sources/: __init__.py  yahoo.py
stonkwise/strategies/: __init__.py  price_action.py  simple.py
stonkwise/utils/: plotting.py
strategies/: __init__.py  simple.py
tasks/: trading_strategy_tasks.md
tests/: __init__.py  test_cli.py  test_integration.py  test_market_structure.py  test_patterns.py
utils/: __init__.py  plotting.py
