[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stonkwise"
version = "0.1.0"
description = "A Python library for backtesting trading strategies using backtrader"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
repository = "https://github.com/yourusername/stonkwise"
license = "MIT"
packages = [
    {include = "stonkwise"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8.1"
backtrader = "^1.9.76"
pandas = "^1.5.3"
numpy = "^1.24.0"
matplotlib = "^3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pre-commit = "^3.3.2"

[tool.poetry.scripts]
stonkwise = "stonkwise.cli:main"
format = "poetry_scripts:run_format"
lint = "poetry_scripts:run_lint"
test = "poetry_scripts:run_test"
clean = "poetry_scripts:run_clean"
example = "poetry_scripts:run_example"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
