[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stonkwise"
version = "0.1.0"
description = "A Python library for backtesting trading strategies using backtrader"
authors = ["Swagata Prateek <thehoneymadl@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/yourusername/stonkwise"
license = "MIT"
packages = [{ include = "stonkwise" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.12"
backtrader = "^1.9.76"
pandas = "^1.5.3"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
requests = "^2.32.3"
yfinance = "^0.2.61"
click = "^8.2.1"
pandas-stubs = "^2.2.3.250527"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pre-commit = "^3.3.2"
autoflake = "^2.2.1"
assertpy = "^1.1"

[tool.poetry.scripts]
stonkwise = "stonkwise.cli:main"
format = "poetry_scripts:run_format"
lint = "poetry_scripts:run_lint"
test = "poetry_scripts:run_test"
clean = "poetry_scripts:run_clean"
example = "poetry_scripts:run_example"
build = "poetry_scripts:run_build"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88
remove_redundant_aliases = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "backtrader.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true
